# priceoracle

./: .env.dist  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  docker-compose.yaml.dist
src/: deploy.rs  eventread.rs  main.rs  server.rs  service.rs  updateprice.rs  web3util.rs
src/contract/: PriceOracle.abi  priceoracle.sol
src/ethtxsign/: Cargo.toml
src/ethtxsign/src/: lib.rs  raw_transaction.rs
