[package]
name = "priceoracle"
version = "0.1.1"
description = "based on ethereum-tx-sign by Mate Antunovic"
authors = ["Rust Wizard <rw@rustwizard.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
slog = "2.5.0"
slog-term = "2.4.1"
slog-async = "2.3.0"
hyper = "0.13"
rust-embed = "5.1.0"
web3 = "0.8.0"
ethtxsign = { path = "src/ethtxsign/" }
ethereum-types = "0.6.0"
hex = "0.3.2"
tokio-core = "0.1.17"
tokio = { version = "0.2.20", features = ["macros"] }
futures = "0.3.4"