[package]
name = "ethtxsign"
version = "0.0.1"
authors = ["Rust Wizard <rw@rustwizard.net>"]
description = "all respects goes to the author of the ethereum-tx-sign Mate Antunovic!"

[dependencies]
ethereum-types = "0.6.0"
serde = "1.0.98"
serde_derive = "1.0.98"
serde_json = "1.0.40"
tiny-keccak = "1.5.0"
secp256k1-plus = "0.5.7"
rlp = "0.4.2"
